src/configure/ui/snapshots/linux_enable_ir_emitter__configure__ui__tool_menu__tests__tool_menu_enabler_selected.snap
---
source: src/configure/ui/tool_menu.rs
expression: terminal.backend()
---
"┏━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━ linux-enable-ir-emitter ━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┓"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃    ┏━━━━━━━━━━━━━━━ IR Enabler ━━━━━━━━━━━━━━━━┓┌─────────────── UVC Tweaker ───────────────┐    ┃"
"┃    ┃  Enable your IR emitter(s) automatically  ┃│     Tweak your UVC controls manually      │    ┃"
"┃    ┃       (recommended for most users)        ┃│                (advanced)                 │    ┃"
"┃    ┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛└───────────────────────────────────────────┘    ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃                                                                                                  ┃"
"┃──────────────────────────────────────────────────────────────────────────────────────────────────┃"
"┃                          Navigate <Tab>   Continue <Enter>   Quit <Esc>                          ┃"
"┗━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━━┛"
